Ajuste tabela endereço